--- a/apps/ionic/src/templates/fragments/push-preferences-fragment.html
+++ b/apps/ionic/src/templates/fragments/push-preferences-fragment.html
@@ -15,7 +15,8 @@
     <label class="item item-input">
         <div class="input-label"><i class="icon ion-ios-sunny-outline"></i>&nbsp Earliest Notification</div>
         <button class="button button-block up-top"
-                style="text-align:left;font-size:14px;border:none;color:black;background-color: white;margin-bottom: 0px;margin-top: 0px;padding-left: 0px;"
+                style="text-align:left;font-size:14px;border:none;color:black;background-color: transparent;margin-bottom:
+                0px;margin-top: 0px;padding-left: 0px;"
                 ng-click="openEarliestReminderTimePicker($event)">
             {{user.earliestReminderTime | fromTwentyFourToTwelveHourFormat}}
         </button>
@@ -23,7 +24,7 @@
     <label class="item item-input">
         <div class="input-label"><i class="icon ion-ios-moon"></i>&nbsp Latest Notification</div>
         <button class="button button-block up-top"
-                style="text-align:left;font-size:14px;border:none;color:black;background-color: white;margin-bottom: 0px;margin-top: 0px;padding-left: 0px;"
+                style="text-align:left;font-size:14px;border:none;color:black;background-color: transparent;margin-bottom: 0px;margin-top: 0px;padding-left: 0px;"
                 ng-click="openLatestReminderTimePicker($event)">
             {{user.latestReminderTime | fromTwentyFourToTwelveHourFormat}}
         </button>
