Humanized reminder notification time, offline indicator ids, login page

--- a/apps/ionic/src/templates/items/notification-item.html
+++ b/apps/ionic/src/templates/items/notification-item.html
@@ -17,8 +17,11 @@
         <h2 style="white-space: normal; line-height: normal; ">
             {{trackingReminderNotification.title}}
         </h2>
-        <p style="white-space: normal;">{{
-            trackingReminderNotification.trackingReminderNotificationTimeLocalHumanString}}
+<!--        <p style="white-space: normal;">
+            {{trackingReminderNotification.trackingReminderNotificationTimeLocalHumanString}}
+        </p>-->
+        <p style="white-space: normal;">
+            {{trackingReminderNotification.day}}
         </p>
     </div>
     <div id="notification-more"
