--- a/apps/ionic/src/templates/login-page.html
+++ b/apps/ionic/src/templates/login-page.html
@@ -23,15 +23,22 @@
                                 <!--<md-button class="md-raised md-primary icon icon-left ion-social-github" style="background: #2d2d2d;" ng-click="state.socialLogin('github', $event)">
                                     &nbsp Github Login &nbsp
                                 </md-button>-->
-                                <img src="img/signin-assets/google_signin_buttons/web/1x/btn_google_signin_dark_normal_web.png"
+<!--                                <img src="img/signin-assets/google_signin_buttons/web/1x/btn_google_signin_dark_normal_web.png"
                                      alt="google login"
                                      style="margin: auto;"
                                      id="signInWithGoogle"
                                      ng-if="!platform.isWebView"
                                      ng-click="state.socialLogin('googleplus', $event)"
                                      class="md-button"
-                                >
-                                <br>
+                                >-->
+<!--                                <img src="img/signin-assets/google_signin_buttons/web/1x/btn_google_signin_dark_normal_web.png"-->
+<!--                                     alt="google login"-->
+<!--                                     style="margin: auto;"-->
+<!--                                     id="signInWithGoogle"-->
+<!--                                     ng-if="!platform.isWebView"-->
+<!--                                     ng-click="state.socialLogin('googleplus', $event)"-->
+<!--                                     class="md-button"-->
+<!--                                >-->
                                 <!-- Google Bitches About Our Standard Material Themed Button
                                 <md-button id="signInWithGoogle2"
                                            ng-if="!platform.isWebView"
@@ -40,22 +47,21 @@
                                            ng-click="state.socialLogin('googleplus', $event)">
                                     &nbsp Google Login &nbsp
                                 </md-button>-->
-<!--                                <div class="login-buttons-container">
+                                <div class="login-buttons-container">
                                     <i class="ion-social-google" id="google-button"
-                                       ng-click="state.socialLogin('googleplus', $event)">
-                                        <span style="font-size: 3rem;">oogle Sign In</span>
+                                       ng-click="state.socialLogin('google', $event)">
                                     </i>
-&lt;!&ndash;                                    <i class="ion-social-twitter" id="twitter-button" ng-click="state.socialLogin('twitter', $event)"></i>&ndash;&gt;
-&lt;!&ndash;                                    <i class="ion-social-github" id="github-button" ng-click="state.socialLogin('github', $event)"></i>&ndash;&gt;
-&lt;!&ndash;                                    <i class="ion-social-facebook" id="facebook-button"&ndash;&gt;
-&lt;!&ndash;                                       ng-click="state.socialLogin('facebook', $event)"></i>&ndash;&gt;
+<!--                                   <i class="ion-social-twitter" id="twitter-button" ng-click="state.socialLogin('twitter', $event)"></i>-->
+                                   <i class="ion-social-github" id="github-button" ng-click="state.socialLogin('github', $event)"></i>
+                                   <i class="ion-social-facebook" id="facebook-button"
+                                      ng-click="state.socialLogin('facebook', $event)"></i>
                                 </div>
-&lt;!&ndash;                                <md-button id="signInWithFacebook"
-                                           class="md-raised md-primary icon icon-left ion-social-facebook rainbow-gradient-animation"
-                                           style="background: #3B5998;"
-                                           ng-click="state.socialLogin('facebook', $event)">
-                                    &nbsp Facebook Login &nbsp
-                                </md-button>&ndash;&gt;-->
+                                <!--                               <md-button id="signInWithFacebook"
+                                                                           class="md-raised md-primary icon icon-left ion-social-facebook rainbow-gradient-animation"
+                                                                           style="background: #3B5998;"
+                                                                           ng-click="state.socialLogin('facebook', $event)">
+                                                                    &nbsp Facebook Login &nbsp
+                                                                </md-button>-->
                                 <md-button id="signUpButton"
                                            class="icon icon-left ion-email center"
                                            ng-click="state.socialLogin('quantimodo', $event, {register: true})">
