--- a/apps/ionic/src/templates/import-data.html
+++ b/apps/ionic/src/templates/import-data.html
@@ -3,6 +3,9 @@
     <ion-content scroll="true"
                  overflow-scroll="true"
                  ng-class="{ isBrowserView : platform.isWeb == true }">
+        <md-progress-linear md-mode="indeterminate"
+                            ng-show="!state.connectors && !state.connector">
+        </md-progress-linear>
         <ion-refresher on-refresh="refreshConnectors()"></ion-refresher>
         <div id="importHelpCard"
              ng-show="showImportHelpCard && !state.connector"
@@ -14,7 +17,6 @@
              style="border-radius: 15px;">
             <div class="item">
                 <div class="row" style="text-align: center; margin: auto;">
-                    <ion-spinner></ion-spinner>
                     <p style=" text-align: center; line-height: normal; font-size: 18px;">
                         &nbsp &nbsp Loading services...
                     </p>
