--- a/apps/ionic/src/css/app.css
+++ b/apps/ionic/src/css/app.css
@@ -3295,7 +3295,8 @@ table {
 *:after {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  }
 
 html {
   overflow: hidden;
@@ -3551,6 +3552,7 @@ ion-infinite-scroll {
   /* background-color: #d71212; */
   /*background: radial-gradient(ellipse at center, rgba(127, 0, 173, 0.6) 0%, rgba(0, 0, 0, 0.8) 60%, #000000 90%), url(../img/backgrounds/stars.jpg);*/
   overflow: hidden;
+  opacity: 1;
   }
 
 .view-container {
@@ -5288,7 +5290,10 @@ ion-tabs.tabs-striped.tabs-color-active-dark .tab-item.tab-item-active, ion-tabs
 .menu-content {
   -webkit-transform: none;
   transform: none;
-  box-shadow: -1px 0px 2px rgba(0, 0, 0, 0.2), 1px 0px 2px rgba(0, 0, 0, 0.2); }
+  box-shadow: -1px 0px 2px rgba(0, 0, 0, 0.2), 1px 0px 2px rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  background-color: #000c48;
+  }
 
 .menu-open .menu-content .pane,
 .menu-open .menu-content .scroll-content {
@@ -5322,7 +5327,9 @@ ion-tabs.tabs-striped.tabs-color-active-dark .tab-item.tab-item-active, ion-tabs
 
 .menu-animated {
   -webkit-transition: -webkit-transform 200ms ease;
-  transition: transform 200ms ease; }
+  transition: transform 200ms ease;
+  opacity: 1;
+  }
 
 /**
  * Modals
@@ -6667,7 +6674,7 @@ button.item.item-button-right {
   padding-top: 1px;
   padding-bottom: 1px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
-  background-color: rgba(255, 255, 255, .8);
+  background-color: rgba(255, 255, 255, .9);
   backdrop-filter: blur(5px);
   box-shadow: 0 1px 3px rgb(0 0 0 / 30%);
   }
@@ -6686,8 +6693,8 @@ button.item.item-button-right {
 .card .item:first-child,
 .list-inset .item:first-child,
 .padding > .list .item:first-child {
-  border-top-left-radius: 2px;
-  border-top-right-radius: 2px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
   /* background-color: rgba(255, 255, 255, .5); */
   backdrop-filter: blur(5px);
   box-shadow: 0 1px 3px rgb(0 0 0 / 30%);
@@ -7860,8 +7867,9 @@ textarea[disabled],
 input[readonly]:not(.cloned-text-input),
 textarea[readonly]:not(.cloned-text-input),
 select[readonly] {
-  background-color: #f8f8f8;
-  cursor: not-allowed; }
+  /* background-color: #f8f8f8; */
+  cursor: not-allowed;
+  }
 
 input[type="radio"][disabled],
 input[type="checkbox"][disabled],
@@ -10554,7 +10562,7 @@ button.md-button::-moz-focus-inner {
   padding-left: 12px;
   padding-bottom: 8px;
   margin: 6px 8px;
-  /*background: transparent;*/
+  background: transparent;
   color: currentColor;
   white-space: nowrap;
   /* Uppercase text content */
@@ -10566,7 +10574,11 @@ button.md-button::-moz-focus-inner {
   font-family: inherit;
   text-decoration: none;
   overflow: hidden;
-  transition: box-shadow 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), background-color 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+	background-color: rgba(255, 255, 255, .15);
+	backdrop-filter: blur(5px);
+	box-shadow: 0 1px 3px rgb(0 0 0 / 30%);
+	color: white;
+  /* transition: box-shadow 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), background-color 0.4s cubic-bezier(0.25, 0.8, 0.25, 1); */
   }
   .md-dense > .md-button:not(.md-dense-disabled),
   .md-dense :not(.md-dense-disabled) .md-button:not(.md-dense-disabled) {
@@ -10593,7 +10605,7 @@ button.md-button::-moz-focus-inner {
   .md-button.md-icon-button {
     margin: 0 6px;
     height: 40px;
-    min-width: 0;
+    min-width: 40px;
     line-height: 24px;
     padding: 8px;
     width: 40px;
@@ -10660,7 +10672,9 @@ button.md-button::-moz-focus-inner {
     border-radius: 4px;
     background-clip: padding-box;
     overflow: hidden;
-    -webkit-mask-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC"); }
+    -webkit-mask-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC");
+
+  }
 
 .md-button.md-icon-button md-icon,
 button.md-button.md-fab md-icon {
@@ -10714,7 +10728,9 @@ md-card {
   display: flex;
   flex-direction: column;
   margin: 8px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3); }
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  /* padding: 10px; */
+  }
   md-card md-card-header {
     padding: 10px;
     display: flex;
@@ -11778,14 +11794,15 @@ md-fab-toolbar {
 
 md-icon {
   margin: auto;
-  background-repeat: no-repeat no-repeat;
-  display: inline-block;
-  vertical-align: middle;
+  /* background-repeat: no-repeat no-repeat; */
+  /* display: inline-block; */
+  /* vertical-align: middle; */
   fill: currentColor;
   height: 24px;
   width: 24px;
-  min-height: 24px;
-  min-width: 24px; }
+  /* min-height: 24px; */
+  /* min-width: 24px; */
+  }
   md-icon svg {
     pointer-events: none;
     display: block; }
@@ -14366,8 +14383,9 @@ md-toolbar {
   width: 100%;
   height: 64px;
   max-height: 64px;
-  padding: 0 16px;
-  margin: 0; }
+  padding: 0 9px;
+  margin: 0;
+  }
   .md-toolbar-tools h1, .md-toolbar-tools h2, .md-toolbar-tools h3 {
     font-size: inherit;
     font-weight: inherit;
@@ -14386,7 +14404,8 @@ md-toolbar {
     .md-toolbar-tools .md-button, .md-toolbar-tools .md-button.md-icon-button md-icon {
       transition-duration: 0.5s;
       transition-timing-function: cubic-bezier(0.35, 0, 0.25, 1);
-      transition-property: background-color, fill, color; }
+      transition-property: background-color, fill, color;
+      }
       .md-toolbar-tools .md-button.ng-animate, .md-toolbar-tools .md-button.md-icon-button md-icon.ng-animate {
         transition: none; }
   .md-toolbar-tools > .md-button:first-child {
@@ -24079,7 +24098,8 @@ label.item.item-input.item-text > input[type="text"] {
 
 .row + .row {
   margin-top: 0;
-  padding-top: 5px; }
+  padding-top: 5px;
+  }
 
 .align-right {
   text-align: right; }
@@ -25172,8 +25192,9 @@ md-fab-progress {
     background-position: -2800px 0; } }
 
 .highcharts-container {
-  width: 100% !important;
-  height: 100% !important; }
+  /* width: 100% !important; */
+  height: 100% !important;
+}
 
 .placeholder-chart {
   height: 240px;
@@ -25404,7 +25425,8 @@ ion-side-menu-content.menu-disabled {
   -webkit-filter: brightness(110%) saturate(200%); }
 
 .primary-outcome-variable-history > img {
-  opacity: 0.5; }
+  opacity: 0.8;
+  }
 
 .active-primary-outcome-variable-rating-button {
   opacity: 1.0 !important;
@@ -26005,7 +26027,8 @@ img.intro-primary-outcome-variable-rating-buttons {
   padding: 6px 10px 5px 16px; }
 
 body {
-  background-color: black; }
+  /* background-color: black; */
+  }
 
 #fc_frame, #fc_frame.fc-widget-normal {
   left: 15px !important;
@@ -26040,10 +26063,11 @@ body {
   box-sizing: border-box; }
 
 body {
-  position: relative;
-  background: hsl(243deg 41% 51%);
+  /* position: relative; */
+  /* background: hsl(243deg 41% 51%); */
 }
 
+/*
 body::before {
   content: "";
   display: block;
@@ -26069,6 +26093,7 @@ body::after {
   box-shadow: 0 150px 300px rgba(243, 86, 146, 1);
   animation: animate_1 10s infinite;
 }
+*/
 
 /* gradient-bg-style */
 .gradient-bg::before {
@@ -26367,18 +26392,16 @@ body::after {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 400px;
-    padding: 40px;
+    padding: 20px;
     background: rgba(0, 0, 0, 0.8);
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
 }
 
-.md-primary {
-linear-gradient(-45deg, rgb(0 46 255), rgb(60 0 255), rgb(35 213 64), rgb(255 0 0)) 0% 0% / 400% 400%;
+.md-rainbow {
+	background: linear-gradient(-45deg, rgb(0 46 255), rgb(60 0 255), rgb(35 213 64), rgb(255 0 0)) 0% 0% / 400% 400%;
 }
-
-
 
 .login-buttons-container {
   display: flex;
@@ -26392,10 +26415,8 @@ linear-gradient(-45deg, rgb(0 46 255), rgb(60 0 255), rgb(35 213 64), rgb(255 0 
 #twitter-button,
 #google-button,
 #facebook-button,
-#signUpButton,
-#circle-page-body-text,
-#signInButton {
-  font-size: 8em;
+.pulsating-glowing-text {
+  font-size: 6em;
   background-color: #18191f;
   color: #fff;
   box-shadow: 2px 2px 2px #00000080, 10px 1px 12px #00000080,
@@ -26404,7 +26425,7 @@ linear-gradient(-45deg, rgb(0 46 255), rgb(60 0 255), rgb(35 213 64), rgb(255 0 
   inset 2px 2px 10px #00000080;
   border-radius: 29px;
   padding: 19px;
-  margin: 20px;
+  margin: 10px;
   animation: animate 3s linear infinite;
   text-shadow: 0 0 50px #0072ff, 0 0 100px #0072ff, 0 0 150px #0072ff, 0 0 200px #0072ff;
 }
@@ -26418,9 +26439,9 @@ linear-gradient(-45deg, rgb(0 46 255), rgb(60 0 255), rgb(35 213 64), rgb(255 0 
   animation-delay: 0.1s;
 }
 
-#signInButton, #signUpButton, #circle-page-body-text{
+.pulsating-glowing-text{
   /*border-radius: 5px;*/
-  font-size: 2em;
+  font-size: 1.5em;
   animation-delay: 0.1s;
   padding: 20px;
   text-shadow: 0 0 10px #0072ff, 0 0 20px #0072ff, 0 0 30px #0072ff, 0 0 40px #0072ff;
@@ -26433,15 +26454,12 @@ linear-gradient(-45deg, rgb(0 46 255), rgb(60 0 255), rgb(35 213 64), rgb(255 0 
   margin: 0;
 }
 
-#signUpButton {
-  animation-delay: 0.9s;
-}
-
-#circle-page-body-text {
-  animation-delay: 1.1s;
-  font-size: 30px;
-  line-height: 1.5;
-  padding: 5px;
+.pulsating-glowing-text {
+	animation-delay: 1.1s;
+	font-size: 30px;
+	line-height: 1.5;
+	padding: 5px;
+	color: white;
 }
 
 @keyframes animate {
@@ -26537,7 +26555,7 @@ linear-gradient(-45deg, rgb(0 46 255), rgb(60 0 255), rgb(35 213 64), rgb(255 0 
   border-radius: 10px;
 }
 
-#variable-search-result {
+.variable-search-result {
   background-color: rgba(255, 255, 255, .6);
   backdrop-filter: blur(5px);
   /*background: white;*/
@@ -26564,7 +26582,7 @@ linear-gradient(-45deg, rgb(0 46 255), rgb(60 0 255), rgb(35 213 64), rgb(255 0 
 
 .search-result-title {
   font-size: 1.2rem;
-  color: black;
+  /*color: black;*/
 }
 
 
@@ -26587,10 +26605,17 @@ linear-gradient(-45deg, rgb(0 46 255), rgb(60 0 255), rgb(35 213 64), rgb(255 0 
   }
 }
 
-.rainbow-gradient-webflow {
-  background: linear-gradient(311deg, #00aaff, #00aaff, #00ffaa, #ff3971, #ff00aa);
-  background-size: 300% 300%;
+.rainbow-gradient-menu {
+  background: linear-gradient(311deg, #ff0000, #6000d5, #0050b3, #b70739, #ff00aa);
+  background-size: 201% 124%;
+  -webkit-animation: RainbowGradientAnimation 26s ease infinite;
+  -moz-animation: RainbowGradientAnimation 26s ease infinite;
+  animation: RainbowGradientAnimation 26s ease infinite;
+}
 
+.rainbow-gradient-background {
+  background: linear-gradient(311deg, #00aaff, #008dd5, #007885, #b70739, #ff00aa);
+  background-size: 300% 300%;
   -webkit-animation: RainbowGradientAnimation 26s ease infinite;
   -moz-animation: RainbowGradientAnimation 26s ease infinite;
   animation: RainbowGradientAnimation 26s ease infinite;
@@ -26616,6 +26641,7 @@ linear-gradient(-45deg, rgb(0 46 255), rgb(60 0 255), rgb(35 213 64), rgb(255 0 
   background-color: rgba(255, 255, 255, .15);
   backdrop-filter: blur(5px);
   box-shadow: 0 1px 3px rgb(0 0 0 / 30%);
+  color: white;
 }
 
 .data-source-image {
@@ -26626,13 +26652,18 @@ linear-gradient(-45deg, rgb(0 46 255), rgb(60 0 255), rgb(35 213 64), rgb(255 0 
 }
 
 .data-source-item {
-  padding: 10px;
-  margin: 19px 19px 19px 19px;
-  border-radius: 28px;
+  padding: 5px;
+  /* margin: 0px; */
+  border-radius: 18px;
   width: unset;
   background: rgba(255, 255, 255, .6);
   backdrop-filter: blur(5px);
   box-shadow: 0 1px 3px rgb(0 0 0 / 30%);
+}
+
+.data-source-buttons {
+	margin-left: auto;
+	margin-right: 0;
 }
 
 .data-source-message {
@@ -26643,4 +26674,223 @@ linear-gradient(-45deg, rgb(0 46 255), rgb(60 0 255), rgb(35 213 64), rgb(255 0 
 .data-source-buttons {
   display: inline-flex;
   text-align: center;
+}
+
+.transparent-bg {
+  background-color: transparent;
+}
+.datetime-input {
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.spinner-container {
+  text-align: center;
+  position: relative;
+}
+
+
+#search-loading {
+  display: block;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  line-height: 103px;
+  text-align: center;
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -60px 0 0 -60px;
+  font-size: 50px;
+  transform-origin: center;
+  border: none;
+  box-shadow: 0px 0px 40px 35px rgba(82, 82, 157,0.4);
+  animation: blink 3s infinite;
+  /*     background-color: #629aa9; */
+}
+
+#search-loading i:before{
+  position: absolute;
+  top: 25%;
+  left: 25%;
+  animation: fly 3.5s linear infinite;
+  z-index: 99;
+  color: #ee6123;
+}
+
+.blockUI {
+  border: none !important;
+}
+
+@keyframes fly {
+  0% {
+    transform: translate(-80%, 20%) scale(.5);
+  }
+  5% {
+    transform: translate(-50%, 20%) scale(.7);
+  }
+  10% {
+    transform: translate(-10%, 0) scale(.9);
+  }
+  15% {
+    transform: translate(10%, -20%) scale(1);
+  }
+  20% {
+    transform: translate(40%, -40%) scale(1.2);
+  }
+  30% {
+    transform: translate(60%, -50%) scale(1.2);
+  }
+  40% {
+    transform: translate(40%, -70%) scale(1.3);
+  }
+  50% {
+    transform: translate(-30%, -50%) scale(1.2);
+  }
+  55% {
+    transform: translate(-20%, -20%) scale(1.1);
+  }
+  60% {
+    transform: translate(0, 0) scale(1);
+  }
+  65% {
+    transform: translate(50%, 20%) scale(.9);
+  }
+  75% {
+    transform: translate(80%, 10%) scale(1.1);
+  }
+  80% {
+    transform: translate(60%, 30%) scale(.9);
+  }
+  85% {
+    transform: translate(30%, 40%) scale(.9);
+  }
+  90% {
+    transform: translate(0, 40%) scale(.7);
+  }
+  100% {
+    transform: translate(-50%, 20%) scale(.5);
+  }
+}
+@keyframes blink {
+  0% {
+    background: #629aa9;
+  }
+  50% {
+    background: #4f4f9a;
+  }
+  100% {
+    background: #629aa9;
+  }
+}
+
+.variable-selector-circle {
+  box-shadow: 2px 2px 5px #434343;
+  margin: 0 auto;
+  border-radius: 50%;
+  width: 130px;
+  height: 130px;
+}
+
+.md-form-content {
+	background: transparent;
+}
+
+.md-form-input {
+	background: white;
+	color: black;
+	border-radius: 10px;
+}
+
+.md-input-label {
+	color: red;
+}
+
+.pac-man {
+	border-radius: 50%;
+	margin: 0 auto;
+	margin-top: 4em;
+	margin-bottom: 4em;
+	border-radius: 100em 100em 0 0;
+	background: #f00;
+	transform-origin: bottom;
+	animation: eating-top .5s infinite;
+}
+.pac-man, .pac-man::before {
+	width: 70px;
+	height: calc(35px);
+	background: #fed75a;
+}
+.pac-man::before {
+	content: '';
+	display: block;
+	margin-top: calc(35px);
+	position: absolute;
+	transform-origin: top;
+	border-radius: 0 0 100em 100em;
+	transform: rotate(80deg);
+	animation: eating-bottom .5s infinite;
+}
+.pac-man::after {
+	position: absolute;
+	border-radius: 100em;
+	content: '';
+	display: block;
+	height: 20px;
+	width: 20px;
+	margin-top: calc(25px);
+	margin-left: calc(25px);
+	transform-origin: center;
+	animation: pac-man-center .5s infinite, pac-man-ball .5s -0.33s infinite linear;
+}
+@keyframes eating-top {
+	0% {
+		transform: rotate(-40deg);
+	}
+	50% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(-40deg);
+	}
+}
+@keyframes eating-bottom {
+	0% {
+		transform: rotate(80deg);
+	}
+	50% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(80deg);
+	}
+}
+@keyframes pac-man-center {
+	0% {
+		transform: rotate(40deg);
+	}
+	50% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(40deg);
+	}
+}
+@keyframes pac-man-ball {
+	0% {
+		opacity: .7;
+		box-shadow: 70px 0 0 0 #fed75a, 120px 0 0 0 #fed75a, 170px 0 0 0 #fed75a, 220px 0 0 0 #fed75a;
+	}
+	100% {
+		box-shadow: 20px 0 0 0 #fed75a, 70px 0 0 0 #fed75a, 120px 0 0 0 #fed75a, 170px 0 0 0 #fed75a;
+	}
+}
+
+.favorite-item {
+	background-color: #f5f5f5;
+	border-radius: 5px;
+	/* padding: 10px; */
+	/* margin: 5px; */
+	cursor: pointer;
 }
