Wallet connect in settings

--- a/apps/ionic/src/templates/settings.html
+++ b/apps/ionic/src/templates/settings.html
@@ -107,10 +107,10 @@
         </div>
 
         <!--  iOS users can't get back to the app and it doesn't work if the avatar is from Google or Facebook
-                <div class="card" ng-if="user && user.avatar && user.email">
+                <div class="card" ng-if="user && user.avatarImage && user.email">
                     <a class="item item-avatar"
                        href="https://en.gravatar.com/emails/">
-                        <img ng-src="{{user.avatar}}">
+                        <img ng-src="{{user.avatarImage}}">
                         <h2>Update Avatar</h2>
                         <p>for {{user.email}}</p>
                     </a>
@@ -202,6 +202,13 @@
                 🅖 Ask Dr. Modo to Record a Measurement
             </a>
         </div>-->
+		<div>
+			<md-button id="connect-wallet-button"
+			           class=""
+			           ng-click="state.toggleMetamaskConnection()">
+				&nbsp {{ state.walletButtonText }} &nbsp
+			</md-button>
+		</div>
         <div id="Developer-Settings"
              class="card"
              ng-click="goToState('app.configuration')">
