--- a/apps/ionic/src/templates/fragments/circle-page.html
+++ b/apps/ionic/src/templates/fragments/circle-page.html
@@ -4,17 +4,24 @@
         <div style="box-shadow: 2px 2px 5px #434343; margin: 0 auto; border-radius: 50%; width: 140px; height: 140px; background-color: {{circlePage.color.circleColor}};">
             <div style="position: relative; display: block; padding-top: 20px;">
                 <div style="z-index: 8; ">
-                    <img id="circle-page-image" ng-src="{{circlePage.image.url}}"
-                         style="width: 100px; height: 100px; margin: auto;" alt="{{circlePage.title}}"
+                    <img id="circle-page-image"
+                         style="width: 100px; height: 100px; margin: auto;"
+                         alt="{{circlePage.title}}"
                          src="{{circlePage.image.url}}">
                 </div>
             </div>
         </div>
         <br>
-        <p id="circle-page-title" ng-if="circlePage.title" style="font-size: 30px; line-height: 1;">
-            {{circlePage.title}}</p>
-        <span id="circle-page-body-text" ng-if="circlePage.bodyText" ng-bind-html="circlePage.bodyText"
-              style="font-size: 22px; line-height: 1.5; padding: 5px;"></span>
+        <p id="circle-page-title"
+           ng-if="circlePage.title"
+           style="font-size: 30px; line-height: 1;">
+            {{circlePage.title}}
+        </p>
+        <span id="circle-page-body-text"
+              ng-if="circlePage.bodyText"
+              ng-bind-html="circlePage.bodyText"
+              style="font-size: 22px; line-height: 1.5; padding: 5px;">
+        </span>
         <br>
     </div>
 </div>
