--- a/apps/ionic/src/templates/intro-tour-new.html
+++ b/apps/ionic/src/templates/intro-tour-new.html
@@ -24,7 +24,7 @@
                    style="display: flex; flex-direction: column; justify-content: center; background-color: {{circlePage.color.backgroundColor}};">
             <div ng-show="!circlePage" ng-include="'templates/splash-logo.html'" style="z-index: 3;"></div>
             <div ng-show="circlePage" ng-cloak ng-include="'templates/fragments/circle-page.html'"></div>
-            <div class="button-bar" style="max-height: 80px;">
+            <div style="max-height: 80px;">
                 <md-button id="goButtonIntro" class="button circle-page-button"
                            ng-show="myIntro.slideIndex == appSettings.appDesign.intro.active.length-1"
                            ng-click="myIntro.startApp()">
