--- a/apps/ionic/src/templates/charts-page.html
+++ b/apps/ionic/src/templates/charts-page.html
@@ -3,22 +3,32 @@
     <ion-content scroll="{ isBrowserView : platform.isWeb == false }"
                  ng-class="{ isBrowserView : platform.isWeb == true }">
         <ion-refresher on-refresh="refreshCharts()"></ion-refresher>
+        <md-progress-linear md-mode="indeterminate"
+                            ng-show="!state.variableObject.charts">
+        </md-progress-linear>
         <div ng-cloak>
-            <div class="card" ng-show="!state.variableObject.charts" style="border-radius: 15px;">
-                <div class="item">
+	        <md-button ng-click="state.mintLit">
+		        <img src="https://www.mintlit.com/images/mintlit-logo.png" style="width: 32px; height: 32px;"/>
+		        Mint Data Gem
+	        </md-button>
+            <div ng-show="!state.variableObject.charts">
+                <div>
+	                <div class="pac-man"></div>
                     <div class="row" style="text-align: center; margin: auto;">
-                        <ion-spinner></ion-spinner>
-                        <p style=" text-align: center; line-height: normal; font-size: 18px; margin: auto;">&nbsp &nbsp Fetching
-                            measurements...</p>
-                    </div>
-                    <div class="row" style="text-align: center;">
-                        <svg style="margin: auto;" width="200px"  height="200px"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="lds-pacman" style="background: none;"><g ng-attr-style="display:{{config.showBean}}" style="display:block"><circle cx="80.8182" cy="50" r="4" ng-attr-fill="{{config.c2}}" fill="#f47e60"><animate attributeName="cx" calcMode="linear" values="95;35" keyTimes="0;1" dur="1" begin="-0.67s" repeatCount="indefinite"></animate><animate attributeName="fill-opacity" calcMode="linear" values="0;1;1" keyTimes="0;0.2;1" dur="1" begin="-0.67s" repeatCount="indefinite"></animate></circle><circle cx="41.2182" cy="50" r="4" ng-attr-fill="{{config.c2}}" fill="#f47e60"><animate attributeName="cx" calcMode="linear" values="95;35" keyTimes="0;1" dur="1" begin="-0.33s" repeatCount="indefinite"></animate><animate attributeName="fill-opacity" calcMode="linear" values="0;1;1" keyTimes="0;0.2;1" dur="1" begin="-0.33s" repeatCount="indefinite"></animate></circle><circle cx="61.0182" cy="50" r="4" ng-attr-fill="{{config.c2}}" fill="#f47e60"><animate attributeName="cx" calcMode="linear" values="95;35" keyTimes="0;1" dur="1" begin="0s" repeatCount="indefinite"></animate><animate attributeName="fill-opacity" calcMode="linear" values="0;1;1" keyTimes="0;0.2;1" dur="1" begin="0s" repeatCount="indefinite"></animate></circle></g><g ng-attr-transform="translate({{config.showBeanOffset}} 0)" transform="translate(-15 0)"><path d="M50 50L20 50A30 30 0 0 0 80 50Z" ng-attr-fill="{{config.c1}}" fill="#e15b64" transform="rotate(39.0272 50 50)"><animateTransform attributeName="transform" type="rotate" calcMode="linear" values="0 50 50;45 50 50;0 50 50" keyTimes="0;0.5;1" dur="1s" begin="0s" repeatCount="indefinite"></animateTransform></path><path d="M50 50L20 50A30 30 0 0 1 80 50Z" ng-attr-fill="{{config.c1}}" fill="#e15b64" transform="rotate(-39.0272 50 50)"><animateTransform attributeName="transform" type="rotate" calcMode="linear" values="0 50 50;-45 50 50;0 50 50" keyTimes="0;0.5;1" dur="1s" begin="0s" repeatCount="indefinite"></animateTransform></path></g></svg>
+                        <h1 class="pulsating-glowing-text"
+                          style="text-align: center; line-height: normal; font-size: 18px; margin: auto;">
+                           Fetching measurements...
+                        </h1>
                     </div>
                 </div>
             </div>
-            <div ng-if="state.variableObject.charts" ng-include="'templates/fragments/charts-fragment.html'"></div>
-            <div ng-if="state.variableObject" ng-include="'templates/fragments/variable-sharing-fragment.html'"></div>
-            <div class="card list" id="statisticsCard" ng-if="state.variableObject.numberOfRawMeasurements">
+            <div ng-if="state.variableObject.charts"
+                 ng-include="'templates/fragments/charts-fragment.html'"></div>
+            <div ng-if="state.variableObject"
+                 ng-include="'templates/fragments/variable-sharing-fragment.html'"></div>
+            <div class="card list"
+                 id="statisticsCard"
+                 ng-if="state.variableObject.numberOfRawMeasurements">
                 <label class="item item-content" ng-if="state.variableObject.numberOfRawMeasurements">
                     <span class="input-label left-text"># of measurements</span>
                     <span class="input-label right-text">{{state.variableObject.numberOfRawMeasurements}}</span>
@@ -64,21 +74,32 @@
                     <span class="input-label right-text">{{state.variableObject.variableId}}</span>
                 </label>
             </div>
-            <div class="list card" ng-click="compareButtonClick()">
-                <a id="compareButton" class="item item-icon-left"> <i class="icon ion-plus positive"></i> Compare
-                    Another Variable </a>
-            </div>
-            <div class="list card" ng-click="recordMeasurementButtonClick()">
-                <a id="recordMeasurementButton" class="item item-icon-left"> <i class="icon ion-plus positive"></i>
-                    Record Measurement </a>
-            </div>
-            <div class="list card" ng-click="addNewReminderButtonClick()">
-                <a id="addReminderButton" class="item item-icon-left"> <i class="icon ion-plus positive"></i> Add
-                    Reminder </a>
-            </div>
-            <div class="list card" ng-click="editSettingsButtonClick()">
-                <a class="item item-icon-left"> <!--Find better icon in blue--> <i
-                        class="icon ion-settings positive"></i> Analysis Settings </a>
+            <div class="center">
+                <md-button ng-click="compareButtonClick()"
+                           class="md-raised md-primary md-button md-ink-ripple"
+                           id="compareButton">
+                    <i class="icon ion-plus positive"></i>
+                    Compare Another Variable
+                </md-button>
+                <md-button ng-click="recordMeasurementButtonClick()"
+                           class="md-raised md-primary md-button md-ink-ripple"
+                           id="recordMeasurementButton">
+                    <i class="icon ion-edit positive"></i>
+                    Record Measurement
+                </md-button>
+                <md-button ng-click="addNewReminderButtonClick()"
+                           class="md-raised md-primary md-button md-ink-ripple"
+                           id="addReminderButton">
+                    <i class="icon ion-ios-bell positive"></i>
+                    Add Reminder
+                </md-button>
+                <md-button id="variableSettingsButton"
+                  class="md-raised md-primary md-button md-ink-ripple"
+                  ng-click="editSettingsButtonClick()">
+                    <!--Find better icon in blue-->
+                    <i class="icon ion-settings positive"></i>
+                    Analysis Settings
+                </md-button>
             </div>
         </div>
     </ion-content>
